<resources>
    <string name="app_name">eAbsensi</string>
    <string name="title_dashboard">Beranda</string>
    <string name="title_rekap">Rekap</string>
    <string name="title_jadwal">Jadwal</string>
    <string name="title_profil">Profil</string>

    <string name="agenda">Agenda</string>
    <string name="sift">Jadwal Sift</string>
    <string name="izin">Izin</string>
    <string name="perjalanan_dinas">Perjalanan Dinas</string>
    <string name="kehadiran">Kehadiran</string>

    <string name="empty">--</string>
    <string name="ok">OK</string>
    <string name="cancel">Mmmmh, no</string>
    <string name="error">Error</string>

    <string name="mockLocationMessage">Stop\nMocking\nMe</string>
    <string name="todo">TODO</string>
    <string name="_0">0</string>
    <string name="timenol">--:--</string>
    <string name="_09_februari_2022">09 Februari 2022</string>

    <string name="ttkehadiran">KEHADIRAN</string>
    <string name="beranda">Beranda</string>
    <string name="rekap">Rekap</string>
    <string name="jadwal">Jadwal</string>
    <string name="profil">Profil</string>
    <string name="tltitle">TUGAS LAPANGAN</string>
    <string name="masuk">Masuk</string>
    <string name="kirim">KIRIM</string>
    <string name="pulang">Pulang</string>
    <string name="titlepd">PERJALANAN DINAS</string>
    <string name="versiapp">Versi: 1.1.7</string>
    <string name="eabsensi">eAbsensi</string>
    <string name="nip_nik">NIP/NIK</string>
    <string name="silahkan_masuk_ke_akun_anda">Silahkan Masuk ke Akun Anda</string>
    <string name="password">Password</string>
    <string name="cttan">Jika anda belum memiliki akun pegawai, silahkan hubungi bagian umum OPD anda.</string>
    <string name="dokumen_surat_perintah">Dokumen Surat Perintah</string>
    <string name="kegiatan">Kegiatan</string>
    <string name="data_perjalanan_dinas">Data Perjalanan Dinas</string>
    <string name="kegiatan_lainnya_opsional">Kegiatan Lainnya: (Opsional)</string>
    <string name="cuti">CUTI</string>
    <string name="_10">10</string>
    <string name="keperluan_pribadi">Keperluan Pribadi</string>
    <string name="sakit">SAKIT</string>
    <string name="penyakit_opsional">Penyakit: (Opsional)</string>
    <string name="jadwal_sift">Jadwal Sift</string>
    <string name="singkronkan_kegiatan">Singkronkan Kegiatan</string>
    <string name="singkronkan_lokasi">Singkronkan Lokasi</string>
    <string name="singkronkan_jadwal_sift">Singkronkan Jadwal Sift</string>
    <string name="berhasil">Berhasil!</string>
    <string name="x">x</string>
    <string name="kembali">Kembali</string>
    <string name="tugas_lapangan">TUGAS LAPANGAN</string>
    <string name="download_info">download info</string>
    <string name="unduh_data">Unduh Data</string>
    <string name="m_malam">M: Malam</string>
    <string name="s_sore">S: Sore</string>
    <string name="p_pagi">P: Pagi</string>
    <string name="keterangan">Keterangan:</string>
</resources>