<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:background="@drawable/backgroundnavbarputih"
    android:gravity="center"
    android:padding="10dp"
    android:layout_margin="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <ImageView
            android:background="@color/putih"
            android:id="@+id/emoticon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            app:srcCompat="@drawable/ic_sukses"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:layout_toEndOf="@+id/emoticon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/berhasil"
                android:textSize="30sp"
                android:textColor="@color/fontbold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/font"
                android:textSize="12sp"
                android:textStyle="bold"
                android:shadowColor="@color/font"
                android:id="@+id/tvInfo1"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/font"
                android:textSize="12sp"
                android:textStyle="bold"
                android:shadowColor="@color/font"
                android:id="@+id/tvInfo2"

                />

        </LinearLayout>


        <TextView
            android:id="@+id/tvTutupDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:padding="10dp"
            android:text="@string/x"
            android:textColor="@color/fontbold"
            android:textSize="24sp"
            android:textStyle="bold"
            android:focusable="true"
            tools:ignore="RelativeOverlap" />


        <TextView
            android:id="@+id/kembaliDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/backgroundnavbar"
            android:padding="10dp"

            android:text="@string/kembali"
            android:textColor="@color/putih"
            android:textSize="14sp" />
    </RelativeLayout>

</LinearLayout>