<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".izin.Cuti.CutiActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_marginTop="30dp"
            android:id="@+id/titleHeaderCuti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">


                <ImageView
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:onClick="backCuti"
                    android:focusable="true"
                    android:id="@+id/ivBack"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    app:srcCompat="@drawable/ic_back"
                    android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"

                android:textSize="18sp"
                android:elevation="10dp"
                android:outlineAmbientShadowColor="@color/fontbold"
                android:outlineSpotShadowColor="@color/fontbold"
                android:text="@string/cuti"
                />

                <ImageView
                    android:layout_marginEnd="20dp"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:onClick="nextKegiatanCuti"
                    android:focusable="true"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/ic_forward"
                    android:contentDescription="@string/todo"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    tools:ignore="UnusedAttribute,UsingOnClickInXml" />


        </RelativeLayout>

        <ScrollView
            android:layout_below="@+id/titleHeaderCuti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvKegiatanCuti"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/list_row_kegiatan" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvlistCheckedCuti"
                    android:textSize="14sp"
                    android:visibility="gone"
                    android:padding="10dp"

                    android:textColor="@color/fontbold"
                    android:background="@color/kuning_2"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/kegiatan_lainnya_opsional"
                    android:textColor="@color/font"

                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/etKegiatanCutiLainnya"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@drawable/backgroundwhiteradius"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:padding="15dp"
                    android:pointerIcon="grab"
                    android:textAlignment="textStart"

                    tools:ignore="RtlCompat"
                    android:textSize="14sp"
                    android:capitalize="sentences"/>
            </LinearLayout>
        </ScrollView>



    </RelativeLayout>

</RelativeLayout>