<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dinasluar.TugasLapangan.TugasLapanganActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/titleHeader"
            android:layout_marginBottom="5dp"
            >
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:onClick="backTl"
                android:layout_centerVertical="true"
                android:focusable="true"
                tools:ignore="UsingOnClickInXml">


                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="5dp"
                    app:srcCompat="@drawable/ic_back"
                    android:contentDescription="@string/todo" />


            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:elevation="10dp"

                android:outlineAmbientShadowColor="@color/fontbold"
                android:outlineSpotShadowColor="@color/fontbold"
                android:text="@string/tugas_lapangan"
                android:textSize="18sp"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:layout_alignParentEnd="true"
                android:onClick="nextKegiatanTL"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:focusable="true">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    app:srcCompat="@drawable/ic_forward"
                    android:contentDescription="@string/todo" />
            </RelativeLayout>

        </RelativeLayout>
        <ScrollView
            android:layout_below="@+id/titleHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvKegiatanPd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/list_row_kegiatan" />

                <TextView
                    android:id="@+id/tvlistChecked"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:visibility="gone"
                    android:padding="10dp"
                    android:textColor="@color/fontbold"
                    android:background="@color/kuning_2"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/kegiatan_lainnya_opsional"
                    android:textColor="@color/font"
                    android:textSize="16sp"

                    />

                <EditText
                    android:id="@+id/etKegiatanLainmya"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@drawable/backgroundwhiteradius"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:padding="15dp"
                    android:pointerIcon="grab"
                    android:textAlignment="textStart"
                    tools:ignore="RtlCompat"

                    android:textSize="14sp"/>

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</RelativeLayout>